[package]
name = "steam-rss"
description = "Get RSS feeds for Steam games."
repository = "https://git.bauke.xyz/Bauke/steam-rss"
license = "AGPL-3.0-or-later"
version = "0.1.0"
authors = ["Bauke <me@bauke.xyz>"]
edition = "2021"

[[bin]]
name = "steam-rss"
path = "source/main.rs"

[dependencies]
color-eyre = "0.6.2"
indicatif = "0.17.1"
ureq = "2.5.0"

[dependencies.clap]
features = ["derive"]
version = "3.2.22"
