[package]
name = "steam-rss"
description = "Get RSS feeds for Steam games."
repository = "https://git.bauke.xyz/Bauke/steam-rss"
license = "AGPL-3.0-or-later"
version = "0.2.1"
authors = ["Bauke <me@bauke.xyz>"]
edition = "2021"

[[bin]]
name = "steam-rss"
path = "source/main.rs"

[dependencies]
color-eyre = "0.6.2"
opml = "1.1.4"
regex = "1.6.0"
serde = "1.0.144"
serde_json = "1.0.85"
ureq = "2.5.0"

[dependencies.clap]
features = ["derive"]
version = "3.2.22"
