[package]
name = "steam-rss"
description = "Get RSS feeds for Steam games."
repository = "https://git.bauke.xyz/Bauke/steam-rss"
license = "AGPL-3.0-or-later"
version = "0.2.2"
authors = ["Bauke <me@bauke.xyz>"]
edition = "2021"

[[bin]]
name = "steam-rss"
path = "source/main.rs"

[dependencies]
color-eyre = "0.6.2"
opml = "1.1.6"
regex = "1.10.3"
serde = "1.0.195"
serde_json = "1.0.111"
ureq = "2.9.1"

[dependencies.clap]
features = ["derive"]
version = "4.4.18"
